Fix spacing. Refactor headings.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,6 +9,7 @@ $font-family-base: 'OrkneyRegular', Sans-Serif !default;
 $font-family-alt: 'GlacialIndifferenceRegular', Sans-Serif !default;
 $font-size-base: 22px !default;
 
+$default-spacing: 10px;
 $border-radius: 0.25em;
 
 $mobile-width: 640px;
