--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -1,8 +1,10 @@
 @import '_variables.scss';
 
 .banner {
+  height: 100%;
   background-color: rgba($dark-color, 0.75);
   text-align: center;
+  justify-content: center;
 
   h1 {
     margin-top: 0.5em;
@@ -10,11 +12,7 @@
   }
 
   .logo {
-    position: absolute;
-    right: -20em;
-    top: -20em;
-    width: 50em;
-    opacity: 0.5;
+    width: 3em;
   }
 
   .organizers {
