--- a/src/styles/venue.scss
+++ b/src/styles/venue.scss
@@ -28,7 +28,7 @@
   }
 }
 
-@include mobile {
+@include tablet {
   .venue {
     .content {
       .text, .map {
